Small alignment fixes

--- a/public/css/Component/Customer/Customer_History_Top.css
+++ b/public/css/Component/Customer/Customer_History_Top.css
@@ -42,24 +42,21 @@
     }
 
     .main-right-top-one-content {
-
         display: flex;
         flex-direction: row;
         align-items: center;
-
     }
 
     .main-right-top-one-content p {
         font-size: 18px;
         font-family: inter;
         letter-spacing: 0.1px;
-
     }
 
     .main-right-top-one-content img {
         width: 55px;
         height: 55px;
-        margin-left: 30px;
+        margin-left: 15px;
         border-radius: 50%;
     }
 
@@ -81,7 +78,6 @@
         padding-top: 9px;
         padding-bottom: 11px;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-
     }
 
     .main-right-top-three-content {
